3dprint/apps-of-apps/delta/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: octoprint
spec:
  template:
    spec:
      containers:
      - name: octoprint
        volumeMounts:
          - mountPath: /dev/ttyUSB0
            name: ttyusb0
            readOnly: false
          - mountPath: /dev/video0
            name: video0
            readOnly: false
      volumes:
      - name: ttyusb0
        hostPath:
          path: /dev/ttyUSB0
      - name: video0
        hostPath:
          path: /new/path/to/video0
