3dprint/apps-of-apps/delta/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: octoprint-c-lan-delta
spec:
  rules:
  - host: raspberrypi
    http:
      paths:
      - path: /delta
        pathType: ImplementationSpecific
        backend:
          service:
            name: octoprint-svc
            port:
              number: 80
